[package]
name = "ti-sbl-prog"
version = "0.1.0"
authors = ["Locha Mesh Developers <locha@contact.io>"]
edition = "2018"

[dependencies]
ti-sbl = { path = "..", version = "0.1" }
serial = "0.4"

clap = "2"
anyhow = "1"

log = "0.4"
env_logger = "0.8"
pretty_env_logger = { version = "0.4", optional = true }

indicatif = "0.15"

[target.'cfg(unix)'.dependencies]
ansi_term = "0.12"

[features]
default = ["pretty-env-logger"]
pretty-env-logger = ["pretty_env_logger"]
